--- a/style.css
+++ b/style.css
@@ -1,1 +1,88 @@
+    header {
+        text-align: center;
+        font-family: "Courier New";
+        font-weight: bold;
+    }
 
+    .name {
+        color: deepskyblue;
+        font-size: 36pt;
+    }
+
+    .job {
+        color: limegreen;
+        font-size: 20pt;
+    }
+
+    .navbar ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        text-align:center;
+        /*background-color: mediumpurple;*/
+        background-color: antiquewhite;
+        opacity: 0.5;
+        font-family: "Courier New";
+        font-size: 12pt;
+    }
+
+    body {
+        background-image: url("studio.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: deepskyblue;
+    }
+
+    /*.background {*/
+        /*background-image: url("studio.jpg");*/
+        /*background-repeat: no-repeat;*/
+        /*background-attachment: fixed;*/
+        /*background-size: cover;*/
+    /*}*/
+
+    .extpages {
+        display:inline-block;
+        padding: 10px;
+    }
+
+    .bodcir {
+        display: inline-block;
+        width: 125px;
+        height: 125px;
+        border-radius: 100px;
+        text-align: center;
+        line-height: 125px;
+        margin-right: 30px;
+        float: right;
+        background-color: bisque;
+        opacity: 0.8;
+        color: darkviolet;
+        font-size: 16pt;
+        font-weight: bold;
+    }
+
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: mediumpurple;
+        opacity: 0.8;
+        color: black;
+    }
+
+    .ftrcontainer {
+        list-style-type: none;
+        display: inline-block;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    .ftrimg {
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        text-align: right;
+        vertical-align: middle;
+    }
