--- a/specificity.css
+++ b/specificity.css
@@ -4,12 +4,12 @@ p {
 }
 
 /* 0,1,1,1 */
-p #content.second {
+#bar p {
   color: black;
 }
 
 /* 0,1,0,0 */
-p #content {
+#google {
   color: orange;
 }
 
@@ -20,7 +20,7 @@ p #content {
 }
 
 /* 0,0,1,0 */
-.definition {
-  float: right;
-  color: blue;
+.rand{
+    float: right;
+    color: blue;
 }
